<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical"
    >

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:lottie_fileName="21290-colleague.json"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        app:lottie_autoPlay="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:layout_marginBottom="20dp"
            app:startIconDrawable="@drawable/ic_baseline_email_24"
            app:startIconTint="#1DA1F2"
            app:endIconMode="clear_text"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconContentDescription="email">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:startIconContentDescription="password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:startIconTint="#1DA1F2"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textSize="16dp"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#B6B6B6"
            android:layout_gravity="right"
            android:textSize="16dp"
            android:text="Forgot Password?"
            android:layout_margin="15dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOG IN"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="14dp"
            app:cornerRadius="10dp"
            android:textColor="#FFF"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#B6B6B6"
                android:textSize="16dp"
                android:text="Don't have an account?"/>
            <TextView
                android:id="@+id/login_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#1DA1F2"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="  Create Account"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
<!--
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/login_LinearLayout"
    android:weightSum="7"
    >

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/login_image"
        android:layout_weight="1"
        >
    </de.hdodenhof.circleimageview.CircleImageView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cheers for Peers"
        android:layout_below="@+id/Login_title"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textSize="20dp"
        android:textStyle="italic"
        android:id="@+id/login_CheerForPeerLabel"
        android:layout_weight="1"
        >
    </TextView>

    <EditText
        android:drawableStart="@drawable/email_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Email "
         android:padding="10dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/rectangledesign"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_margin="15dp"
        android:id="@+id/login_email"
        android:drawableLeft="@drawable/email_icon">
    </EditText>

    <EditText
        android:drawableStart="@drawable/password_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter Password "
        android:padding="10dp"
        android:layout_weight="1"
        android:layout_margin="15dp"
        android:inputType="numberPassword"
        android:background="@drawable/rectangledesign"
        android:id="@+id/login_Password"
        android:drawableLeft="@drawable/password_icon">
    </EditText>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="2"
    android:layout_weight="1"
    >
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_weight="1.6"/>
    <TextView
        android:layout_weight="0.2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:id="@+id/login_ForgetPasswordLabel"
        android:textSize="15dp"
        android:layout_weight="0.2"
        >
    </TextView>
</LinearLayout>

    <Button
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/rectangle"
        android:text="Sign In"
        android:textColor="#fff"
        android:gravity="center"
        android:textSize="15dp"
        android:id="@+id/login_button"
        >
    </Button>



    <TextView
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up instead"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:textColor="@color/Link_color"
        android:id="@+id/login_signinlink"
        >
    </TextView>
</LinearLayout>
-->




