...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fab_colorNormal="@color/colorPrimary"
            app:fab_colorPressed="#0080ff"
            app:fab_size="mini"
            app:fab_icon="@drawable/group"
            android:id="@+id/action2"
            app:fab_title="group chat"
            >
        </com.getbase.floatingactionbutton.FloatingActionButton>
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>
